--- a/src/index.css
+++ b/src/index.css
@@ -15,3 +15,18 @@ code {
 .list-form{
   background-color: white;
 }
+.li-items-container{
+  display: flex;
+  flex-wrap: wrap;
+  font-size: 30px;
+  text-align: center;
+  justify-content: center;
+}
+.li-items-left {
+  padding: 5px;
+  flex: 50%;
+}
+.li-items-right{
+  padding: 5px;
+  flex: 50%;
+}
